<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.arshit_emotilog.ui.EmojiDashboard.EmojiPage"
        android:label="@string/title_home"
        tools:layout="@layout/emoji_page" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.arshit_emotilog.ui.LogDashboard.LogPage"
        android:label="@string/title_dashboard"
        tools:layout="@layout/log_page" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.arshit_emotilog.ui.SummaryDashboard.SummaryPage"
        android:label="@string/title_notifications"
        tools:layout="@layout/summary_page" />
</navigation>